Today it is the end

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="shoulders">Shoulders</string>
     <string name="back">Back</string>
     <string name="triceps">Triceps</string>
+    <string name="super_set_was_deleted">Super set was deleted</string>
 
 
 </resources>
