various little things

--- a/app/src/main/res/values-ru-rBY/strings.xml
+++ b/app/src/main/res/values-ru-rBY/strings.xml
@@ -85,4 +85,5 @@
     <string name="shoulders">Плечи</string>
     <string name="back">Спина</string>
     <string name="triceps">Трицепс</string>
+    <string name="super_set_was_deleted">Супер сет был удален</string>
 </resources>
