--- a/screens/common/src/main/res/values-ru-rBY/strings.xml
+++ b/screens/common/src/main/res/values-ru-rBY/strings.xml
@@ -66,7 +66,7 @@
     <string name="Term_season_ticket">Срок действия абонемента не может быть меньше текущей даты</string>
     <string name="number_of_training">Количество тренировок не может быть меньше 1</string>
     <string name="exercise_was_delete">Упражение было удалено</string>
-    <string name="approach">%1s кг x %2s</string>
+    <string name="set">%1s кг x %2s</string>
     <string name="exercise_autofill">Упражнения для автозаполнения</string>
     <string name="Settings">Настройки</string>
     <string name="list_trainings">Список тренировок</string>
